Added canvas + style

--- a/lol.html
+++ b/lol.html
@@ -5,10 +5,14 @@
     <title>
         BJR LOL
     </title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <div id="lol"></div>
+
+    <canvas id="canvas" width="200" height="300">
+    </canvas>
 </body>
 <script type="text/javascript" src="js/l.js"></script>
 
