Stickman sans avant-bras

--- a/lol.html
+++ b/lol.html
@@ -10,9 +10,31 @@
 
 <body>
     <div id="lol"></div>
+    <div id="stickman">
+        <div id="head"></div>
 
-    <canvas id="canvas" width="200" height="300">
-    </canvas>
+        <div id="body"></div>
+        <div id="bodyEnd"></div>
+
+        <div id="leftLegUp"></div>
+        <div id="leftLegUpEnd"></div>
+
+        <div id="rightLegUp"></div>
+        <div id="rightLegUpEnd"></div>
+
+        <div id="leftLegDown"></div>
+        <div id="rightLegDown"></div>
+
+        <div id="leftFoot"></div>
+        <div id="rightFoot"></div>
+
+        <div id="leftUpperArm"></div>
+        <div id="leftUpperArmEnd"></div>
+
+        <div id="rightUpperArm"></div>
+        <div id="rightUpperArmEnd"></div>
+        <div></div>
+    </div>
 </body>
 <script type="text/javascript" src="js/l.js"></script>
 
